candidate linked to election